package victor.training.clean.core.model;

import lombok.Getter;
import lombok.Setter;

import jakarta.persistence.Entity;
import jakarta.persistence.GeneratedValue;
import jakarta.persistence.Id;
import jakarta.persistence.ManyToOne;

import java.math.BigDecimal;

@Entity
@Getter
@Setter
public class InsurancePolicy {
  @Id
  @GeneratedValue
  private Long id;

  @ManyToOne
  private Customer customer;

  private Long countryId;

  private BigDecimal valueInEur;

}
